// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StreamingProgressCount should not render a trace link when not opted into with &trace=1 1`] = `
<DocumentFragment>
  <small
    class="d-flex align-items-center count countInProgress"
    data-testid="streaming-progress-count"
  >
    0 results in 0.00s
  </small>
</DocumentFragment>
`;

exports[`StreamingProgressCount should render correctly for 0 items in progress 1`] = `
<DocumentFragment>
  <small
    class="d-flex align-items-center count countInProgress"
    data-testid="streaming-progress-count"
  >
    0 results in 0.00s
  </small>
</DocumentFragment>
`;

exports[`StreamingProgressCount should render correctly for 0 repositories 1`] = `
<DocumentFragment>
  <small
    class="d-flex align-items-center count countInProgress"
    data-testid="streaming-progress-count"
  >
    0 results in 0.00s
    <svg
      aria-label="From 0 repositories"
      class="mdi-icon iconInline ml-1"
      data-tooltip="From 0 repositories"
      fill="currentColor"
      height="24"
      role="img"
      tabindex="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
      />
    </svg>
  </small>
</DocumentFragment>
`;

exports[`StreamingProgressCount should render correctly for 1 item complete 1`] = `
<DocumentFragment>
  <small
    class="d-flex align-items-center count"
    data-testid="streaming-progress-count"
  >
    1 result in 1.25s
    <svg
      aria-label="From 1 repository"
      class="mdi-icon iconInline ml-1"
      data-tooltip="From 1 repository"
      fill="currentColor"
      height="24"
      role="img"
      tabindex="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
      />
    </svg>
  </small>
</DocumentFragment>
`;

exports[`StreamingProgressCount should render correctly for 123 items complete 1`] = `
<DocumentFragment>
  <small
    class="d-flex align-items-center count"
    data-testid="streaming-progress-count"
  >
    123 results in 1.25s
    <svg
      aria-label="From 500 repositories"
      class="mdi-icon iconInline ml-1"
      data-tooltip="From 500 repositories"
      fill="currentColor"
      height="24"
      role="img"
      tabindex="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
      />
    </svg>
  </small>
</DocumentFragment>
`;

exports[`StreamingProgressCount should render correctly for big numbers complete 1`] = `
<DocumentFragment>
  <small
    class="d-flex align-items-center count"
    data-testid="streaming-progress-count"
  >
    1.2m results in 52.50s
    <svg
      aria-label="From 8.9k repositories"
      class="mdi-icon iconInline ml-1"
      data-tooltip="From 8.9k repositories"
      fill="currentColor"
      height="24"
      role="img"
      tabindex="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
      />
    </svg>
  </small>
</DocumentFragment>
`;

exports[`StreamingProgressCount should render correctly for limithit 1`] = `
<DocumentFragment>
  <small
    class="d-flex align-items-center count"
    data-testid="streaming-progress-count"
  >
    123+ results in 1.25s
    <svg
      aria-label="From 500 repositories"
      class="mdi-icon iconInline ml-1"
      data-tooltip="From 500 repositories"
      fill="currentColor"
      height="24"
      role="img"
      tabindex="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
      />
    </svg>
  </small>
</DocumentFragment>
`;

exports[`StreamingProgressCount should render correctly when a trace url is provided 1`] = `
<DocumentFragment>
  <small
    class="d-flex align-items-center count countInProgress"
    data-testid="streaming-progress-count"
  >
    0 results in 0.00s
  </small>
  <small
    class="d-flex ml-2"
  >
    <a
      class=""
      href="https://sourcegraph.test:3443/-/debug/jaeger/trace/abcdefg"
    >
      <svg
        aria-hidden="true"
        class="mdi-icon iconInline mr-2"
        fill="currentColor"
        height="24"
        role="img"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M19,3H14.82C14.4,1.84 13.3,1 12,1C10.7,1 9.6,1.84 9.18,3H5A2,2 0 0,0 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M12,3A1,1 0 0,1 13,4A1,1 0 0,1 12,5A1,1 0 0,1 11,4A1,1 0 0,1 12,3M5,15H8.11L9.62,12.15L10.38,17.92L14.07,13.21L15.89,15H19V19H5V15M19,13.46H16.53L13.93,10.86L11.44,14.05L10.5,7.08L7.17,13.46H5V5H7V6H17V5H19V6L19,13.46Z"
        />
      </svg>
      View trace
    </a>
  </small>
</DocumentFragment>
`;
